--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b51bb6
-	base = a2924e8
+	base = 25c56ea
 	trim = flir_camera_description
-	trimbase = 
+	trimbase = a2924e8
