--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b51bb6
-	base = b097785
+	base = 3323c43
 	trim = flir_camera_msgs
-	trimbase = 
+	trimbase = b097785
