--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b51bb6
-	base = 3ff5708
+	base = eae6873
 	trim = spinnaker_camera_driver
-	trimbase = 
+	trimbase = 3ff5708
