--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b51bb6
-	base = c4f0173
+	base = 2b15fb2
 	trim = spinnaker_synchronized_camera_driver
-	trimbase = 
+	trimbase = c4f0173
