--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e41df00
-	base = 3408d23
+	base = 233d10b
 	trim = flir_camera_msgs
-	trimbase = 
+	trimbase = 3408d23
