--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e41df00
-	base = f2ec71f
+	base = 82bf829
 	trim = spinnaker_camera_driver
-	trimbase = 
+	trimbase = f2ec71f
