--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e41df00
-	base = 61fa82c
+	base = aaf1eed
 	trim = flir_camera_description
-	trimbase = 
+	trimbase = 61fa82c
