--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e41df00
-	base = a9eff63
+	base = ea2c611
 	trim = spinnaker_synchronized_camera_driver
-	trimbase = 
+	trimbase = a9eff63
